fixes whitespace bug

--- a/myFitWeb/app/assets/stylesheets/profiles.scss
+++ b/myFitWeb/app/assets/stylesheets/profiles.scss
@@ -122,11 +122,11 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 }
 
 .goals_content p {
-  margin-top: 5px;
+  padding-top: 5px;
 }
 
 .supplements_content p {
-  margin-top: 5px;
+  padding-top: 5px;
 }
 .personal {
   float: left;
